--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,14 @@ services:
     image: postgres:11
     ports: 
       - 5432:5432
+
+  dataengineering: 
+    env_file:
+      - database.env
+    build: ./python_code
+    volumes: 
+      - ./python_code:/python_code
+    ports:
+      - 80:5000
+    depends_on:
+      - db
